# gxk

./: .gitignore  README.md
cmake/: glib-compile-resources.cmake
gxk/: CMakeLists.txt  gxk.h  gxk4.pc.in
gxk/public/: application.h  init.h  menubinding.h  menuitem.h  menushell.h  popovermenu.h  popovermenubar.h
gxk/src/: application.c  init.c  menubinding.c  menuitem.c  menushell.c  popovermenu.c  popovermenubar-int.h  popovermenubar.c  popovermenubaritem.c  popovermenubaritem.h
gxk/src/res/: appstyles.css  resources.xml
play/: CMakeLists.txt
play/boxing/: CMakeLists.txt
play/boxing/src/: application.c  application.h  main.c  resources.c  widget.c  window.c  window.h
play/boxing/src/res/: resources.xml
play/drawing/: CMakeLists.txt
play/drawing/src/: application.c  application.h  main.c  resources.c  widget.c  widget.h  window.c  window.h
play/drawing/src/res/: resources.xml
play/hello/src/: application.c  window.c  window.h
play/src/: main.c
samples/demo/: CMakeLists.txt
samples/demo/src/: application.c  application.h  main.c  resources.c  shim.h  window.c  window.h
samples/demo/src/res/: dlgstuff.ui  resources.xml  window.ui
samples/hello/: CMakeLists.txt
samples/hello/src/: application.c  application.h  main.c
themes/default/: README.MD  _colors.scss  main.scss
themes/default/abstracted/: main.scss
themes/default/abstracted/colors/: _all.scss  backdrop.scss  base.scss  borders.scss  hc-overrides.scss  osd.scss  scrollbar.scss  selected.scss  switch.scss  toolbar.scss
themes/default/abstracted/colors-public/: wm.scss
themes/default/abstracted/common/: _all.scss  basic.scss  calendar.scss  checkradio.scss  colorswatch.scss  combobox.scss  complexlist.scss  datatable.scss  emoji.scss  entry.scss  expander.scss  filechooserdialog.scss  gtkalpha.scss  icons.scss  infobar.scss  menu.scss  menubar.scss  messagedialog.scss  notebook.scss  notification.scss  pathbar.scss  popover.scss  printdialog.scss  richlist.scss  scrollbar.scss  switch.scss  titlebuttons.scss
themes/default/abstracted/drawing/: buttons.scss  checkradio.scss  entries.scss  overshoot.scss
themes/default/colors/: checkradio.scss  headerbar.scss  insensitive.scss  label.scss  links.scss  menu.scss  progressbar.scss  statuses.scss  suggested.scss
themes/default/common/: boxedlist.scss  button.scss  constants.scss  decorations.scss  editlabel.scss  entry.scss  frame.scss  headerbar.scss  levelbar.scss  link.scss  list.scss  misc.scss  notebook.scss  paned.scss  places.scss  progressbar.scss  scale.scss  sidebar.scss  spinbutton.scss  spinner.scss  toolbar.scss  tooltip.scss  touchcp.scss  treeview.scss  typography.scss  video.scss
themes/default/drawing/: entries.scss  generic.scss  headerbar.scss
useful/: sedhello.sh
